--- a/Northwind 2018/WebApp/Web.config
+++ b/Northwind 2018/WebApp/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20180910010353.mdf;Initial Catalog=aspnet-WebApp-20180910010353;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=Northwind_DMIT2018;Integrated Security=true" providerName="System.Data.SqlClient" />
+    <add name="NW2018" connectionString="Data Source=.;Initial Catalog=Northwind_DMIT2018;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
