--- a/Northwind 2018/NorthwindTraders/NorthwindTraders.csproj
+++ b/Northwind 2018/NorthwindTraders/NorthwindTraders.csproj
@@ -53,12 +53,19 @@
     <Compile Include="BLL\CRUD\RegionController.cs" />
     <Compile Include="BLL\CRUD\ShipperController.cs" />
     <Compile Include="BLL\CRUD\TerritoryController.cs" />
+    <Compile Include="BLL\HumanResourcesController.cs" />
     <Compile Include="DAL\NorthwindContext.cs" />
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Customer.cs" />
+    <Compile Include="Entities\DTOs\StaffProfile.cs" />
     <Compile Include="Entities\Employee.cs" />
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\OrderDetail.cs" />
+    <Compile Include="Entities\POCOs\KeyValueOption.cs" />
+    <Compile Include="Entities\POCOs\NewEmployeeProfile.cs" />
+    <Compile Include="Entities\POCOs\RegionalManager.cs" />
+    <Compile Include="Entities\POCOs\StaffTerritory.cs" />
+    <Compile Include="Entities\POCOs\TerritoryAssignment.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\Region.cs" />
     <Compile Include="Entities\Shipper.cs" />
