In-Class ad-hoc

--- a/Northwind 2018/WebApp/WebApp.csproj
+++ b/Northwind 2018/WebApp/WebApp.csproj
@@ -446,6 +446,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="UserControlz\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
