--- a/Northwind 2018/NorthwindTraders/NorthwindTraders.csproj
+++ b/Northwind 2018/NorthwindTraders/NorthwindTraders.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,13 +56,13 @@
     <Compile Include="BLL\CRUD\ShipperController.cs" />
     <Compile Include="BLL\CRUD\TerritoryController.cs" />
     <Compile Include="BLL\HumanResourcesController.cs" />
-    <Compile Include="DAL\NorthwindContext.cs" />
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="Entities\DTOs\StaffProfile.cs" />
     <Compile Include="Entities\Employee.cs" />
+    <Compile Include="DAL\NorthwindContext.cs" />
     <Compile Include="Entities\Order.cs" />
-    <Compile Include="Entities\OrderDetail.cs" />
+    <Compile Include="Entities\Order_Detail.cs" />
     <Compile Include="Entities\POCOs\KeyValueOption.cs" />
     <Compile Include="Entities\POCOs\NewEmployeeProfile.cs" />
     <Compile Include="Entities\POCOs\RegionalManager.cs" />
@@ -72,6 +74,7 @@
     <Compile Include="Entities\Supplier.cs" />
     <Compile Include="Entities\Territory.cs" />
     <Compile Include="Entities\Version.cs" />
+    <Compile Include="Entities\VersionDDLEventLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
