--- a/Northwind 2018/WebApp/Web.config
+++ b/Northwind 2018/WebApp/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=Northwind_DMIT2018;Integrated Security=true" providerName="System.Data.SqlClient" />
     <add name="NW2018" connectionString="Data Source=.;Initial Catalog=Northwind_DMIT2018;Integrated Security=true" providerName="System.Data.SqlClient" />
@@ -29,10 +29,10 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="Microsoft.AspNet.Identity" />
       </namespaces>
-      <controls>
-        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
-      </controls>
-    </pages>
+      
+    <controls>
+      <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+    </controls></pages>
     <membership>
       <providers>
         <!--
