Overview on Default.aspx + new forms

--- a/Northwind 2018/NorthwindTraders/NorthwindTraders.csproj
+++ b/Northwind 2018/NorthwindTraders/NorthwindTraders.csproj
@@ -52,19 +52,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\CRUD\ProductsController.cs" />
     <Compile Include="BLL\CRUD\RegionController.cs" />
     <Compile Include="BLL\CRUD\ShipperController.cs" />
     <Compile Include="BLL\CRUD\TerritoryController.cs" />
     <Compile Include="BLL\HumanResourcesController.cs" />
+    <Compile Include="BLL\ProductCatalogueController.cs" />
+    <Compile Include="BLL\SalesController.cs" />
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Customer.cs" />
+    <Compile Include="Entities\DTOs\CustomerOrderWithDetails.cs" />
+    <Compile Include="Entities\DTOs\EditCustomerOrder.cs" />
+    <Compile Include="Entities\DTOs\ProductCategory.cs" />
     <Compile Include="Entities\DTOs\StaffProfile.cs" />
     <Compile Include="Entities\Employee.cs" />
     <Compile Include="DAL\NorthwindContext.cs" />
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\Order_Detail.cs" />
+    <Compile Include="Entities\POCOs\Address.cs" />
+    <Compile Include="Entities\POCOs\CustomerOrder.cs" />
+    <Compile Include="Entities\POCOs\CustomerOrderItem.cs" />
+    <Compile Include="Entities\POCOs\CustomerSummary.cs" />
+    <Compile Include="Entities\POCOs\EditOrderItem.cs" />
+    <Compile Include="Entities\POCOs\InventoryStatus.cs" />
     <Compile Include="Entities\POCOs\KeyValueOption.cs" />
     <Compile Include="Entities\POCOs\NewEmployeeProfile.cs" />
+    <Compile Include="Entities\POCOs\ProductInfo.cs" />
+    <Compile Include="Entities\POCOs\ProductItem.cs" />
     <Compile Include="Entities\POCOs\RegionalManager.cs" />
     <Compile Include="Entities\POCOs\StaffTerritory.cs" />
     <Compile Include="Entities\POCOs\TerritoryAssignment.cs" />
