--- a/Northwind 2018/WebApp/Web.config
+++ b/Northwind 2018/WebApp/Web.config
@@ -7,7 +7,18 @@
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
+  <appSettings>
+    <add key="adminUserName" value="Webmaster" />
+    <add key="adminEmail" value="Webmaster@Northwind.tba" />
+    <add key="adminPassword" value="Pa$$w0rd" />
+    <add key="adminRole" value="Administrators" />
+    <add key="startupRoles" value="Administrators;Employees;Customers;RegisteredUsers" />
+    <add key="customerRole" value="Customers" />
+    <add key="employeeRole" value="Employees" />
+    <add key="newUserPassword" value="Pa$$word1" />
+  </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=Northwind_DMIT2018;Integrated Security=true" providerName="System.Data.SqlClient" />
     <add name="NW2018" connectionString="Data Source=.;Initial Catalog=Northwind_DMIT2018;Integrated Security=true" providerName="System.Data.SqlClient" />
@@ -30,9 +41,10 @@
         <add namespace="Microsoft.AspNet.Identity" />
       </namespaces>
       
-    <controls>
-      <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
-    </controls></pages>
+      <controls>
+        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+      </controls>
+    </pages>
     <membership>
       <providers>
         <!--
