Change namespace for custom server control

--- a/Eye-Max/WebApp/WebApp.csproj
+++ b/Eye-Max/WebApp/WebApp.csproj
@@ -224,7 +224,7 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
-    <Compile Include="CustomerServerControls\CleanCheckBox.cs" />
+    <Compile Include="CustomServerControls\CleanCheckBox.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
