--- a/Northwind 2018/WebApp/Web.config
+++ b/Northwind 2018/WebApp/Web.config
@@ -14,7 +14,7 @@
     <add key="adminEmail" value="Webmaster@Northwind.tba" />
     <add key="adminPassword" value="Pa$$w0rd" />
     <add key="adminRole" value="Administrators" />
-    <add key="startupRoles" value="Administrators;Employees;Customers;RegisteredUsers" />
+    <add key="startupRoles" value="Employees;Customers;RegisteredUsers" />
     <add key="customerRole" value="Customers" />
     <add key="employeeRole" value="Employees" />
     <add key="newUserPassword" value="Pa$$word1" />
