Improve Default security admin page

--- a/Northwind 2018/WebApp/Web.config
+++ b/Northwind 2018/WebApp/Web.config
@@ -10,11 +10,11 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings>
+    <add key="startupRoles" value="Administrators;Employees;Customers;RegisteredUsers" />
     <add key="adminUserName" value="Webmaster" />
     <add key="adminEmail" value="Webmaster@Northwind.tba" />
     <add key="adminPassword" value="Pa$$w0rd" />
     <add key="adminRole" value="Administrators" />
-    <add key="startupRoles" value="Employees;Customers;RegisteredUsers" />
     <add key="customerRole" value="Customers" />
     <add key="employeeRole" value="Employees" />
     <add key="newUserPassword" value="Pa$$word1" />
