Wired up my ODS controls

--- a/GL Starter Kit App/WebApp/WebApp.csproj
+++ b/GL Starter Kit App/WebApp/WebApp.csproj
@@ -435,6 +435,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GroceryStore\GroceryStore.csproj">
+      <Project>{256849f7-e473-47f4-985e-6f3bf8737d95}</Project>
+      <Name>GroceryStore</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
