Updated the UI to show Orders & Pickers

--- a/GL Starter Kit App/GroceryStore/GroceryStore.csproj
+++ b/GL Starter Kit App/GroceryStore/GroceryStore.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\OrderList.cs" />
     <Compile Include="Entities\Picker.cs" />
+    <Compile Include="Entities\PickerExtension.cs" />
     <Compile Include="Entities\POCOsDTOs\Customer.cs" />
     <Compile Include="Entities\POCOsDTOs\OrderItem.cs" />
     <Compile Include="Entities\POCOsDTOs\PickList.cs" />
