--- a/GL Starter Kit App/WebApp/Web.config
+++ b/GL Starter Kit App/WebApp/Web.config
@@ -11,6 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
+    <add name="GroceryListContext" connectionString="data source=.;initial catalog=GroceryList;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20181116122055.mdf;Initial Catalog=aspnet-WebApp-20181116122055;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
