--- a/Capstone Teams/Capstone/Web.config
+++ b/Capstone Teams/Capstone/Web.config
@@ -9,7 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Capstone-20181115092842.mdf;Initial Catalog=aspnet-Capstone-20181115092842;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"
+         connectionString="Data Source=.;Initial Catalog=Capstone_2019;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
+    <add name="CapstoneDb"
+         connectionString="Data Source=.;Initial Catalog=Capstone_2019;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
