--- a/Capstone Teams/CapstoneSystem/CapstoneSystem.csproj
+++ b/Capstone Teams/CapstoneSystem/CapstoneSystem.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\CapstoneTeamController.cs" />
     <Compile Include="Entities\CapstoneClient.cs" />
     <Compile Include="DAL\CapstoneContext.cs" />
     <Compile Include="Entities\POCOs\ClientInfo.cs" />
